# sparse-solver

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
scripts/: download_matrices.sh  install_deps.sh
src/: cli.cpp  cli.hpp  cond_est.cpp  cond_est.hpp  csv_writer.cpp  csv_writer.hpp  main.cpp  matrix_io.cpp  matrix_io.hpp  metrics.cpp  metrics.hpp  mumps_solver.cpp  mumps_solver.hpp  orchestrator.cpp  orchestrator.hpp  pardiso_solver.cpp  pardiso_solver.hpp  rhs_gen.cpp  rhs_gen.hpp  solver_base.hpp  sparse_matrix.hpp  superlu_solver.cpp  superlu_solver.hpp  worker.cpp  worker.hpp
tests/: test_cond_est.cpp  test_csv_writer.cpp  test_matrix_io.cpp  test_metrics.cpp  test_rhs_gen.cpp  test_stub.cpp
tests/data/: small_unsym.mtx
